fixed link boxes on homepage breaking mobile styles with overflow

--- a/src/app/styles/pages/_home.scss
+++ b/src/app/styles/pages/_home.scss
@@ -148,6 +148,8 @@
                     top: 0;
                     right: 50%;
                     transform: translate(50%, 0);
+
+                    border-right: solid 2px $off-white;
     
                     div {
     
